5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1811_2564.log
== SUBMITION (2019-06-13 00:36:22) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(vet1)):
	while(size(vet1)>g):
		if(vet1[i]>vet[g]):
			v+=1
		elif(vet1[i]==vet[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
1.06871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2564/main.py", line 10, in <module>
    while (i<size(vet1)):
NameError: name 'vet1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:36:42) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(vet1)):
	while(size(vet1)>g):
		if(vet1[i]>vet[g]):
			v+=1
		elif(vet1[i]==vet[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:38:03) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v+=1
		elif(v1[i]==v2[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
0.95017
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:42:50) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v+=1
		elif(v1[i]==v2[g]):
			e+=1
		else:
			d+=1
		g=g+1
		i+=1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
0.925702
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
time 1: time 2: [0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
time 1: time 2: [12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:43:11) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v+=1
		elif(v1[i]==v2[g]):
			e+=1
		else:
			d+=1
		g+=1
		i+=1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
1.11624
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 14:57:20) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v=v+1
		elif(v1[i]==v2[g]):
			e=e+1
		else:
			d=d+1
		g=g+1
		i=i+1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
1.00365
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
time 1: time 2: [12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:57:41) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v=v+1
		elif(v1[i]==v2[g]):
			e=e+1
		else:
			d=d+1
		g=g+1
		i=i+1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 14:58:47) 
-- CODE:
from numpy import *
v1=array(eval(input("time 1: ")))
v2=array(eval(input("time 2: ")))
v=0
i=0
g=0
e=0
d=0
a=zeros(3, dtype=int)
while (i<size(v1)):
	while(size(v1)>g):
		if(v1[i]>v2[g]):
			v=v+1
		elif(v1[i]==v2[g]):
			e=e+1
		else:
			d=d+1
		g=g+1
		i=i+1
a[0]=v
a[1]=e
a[2]=d
print(a)
-- EXECUTION TIME:
0.926676
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
